fixed a link, created messages page, added dark mode (beta)

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -142,6 +142,7 @@ html, body {
 
 a {
     text-decoration: none;
+    color: #079db8;
 }
 
 .btn-gray {
@@ -334,4 +335,12 @@ a {
     border: none;
     box-shadow: 0 0 6px 2px #888;
     padding: 1rem;
+}
+
+#toggle-dark {
+    height: 1rem;
+    width: 1rem;
+    border-radius: 1rem;
+    cursor: pointer;
+    transition: all 500ms;
 }
